      - Updated Woodstox to version 4.2.4.
      - Updated Joda time to version 2.3.
      - Updated JUnit to version 4.11.
      - Updated MongoDB to version 2.11.3.
      - Updated Simple Framework to version 5.1.6.
      - Updated Spring Framework to version 3.2.6.
      - Updated TestNG to version 6.8.7.
      - Updated SnakeYAML to version 1.13.
      - Added Thymeleaf extension, issue #824.

    - API changes
      - Moved org.restlet.ext.net HTTP/HTTPS/FTP client connectors into the core
        org.restlet module (org.restlet.engine.net package) as the new internal
        client connectors.
      - Moved NIO-based internal connector to new org.restlet.ext.nio extension.
        Marked as "developer preview" state.
      - Added new internal HTTP/HTTPS server connectors based on the 
        com.sun.net.httpserver package available in JDK 6. Issue #381.
      - Moved org.restlet.ext.ssl into core org.restlet.engine.ssl package except
        classes related to the jSSLutils library now part of new org.restlet.ext.jsslutils
        extension and for CertificateAuthenticator class now in org.restlet.security.
        Solves issue #803 reported by Tal Liron.
      - XEE injection security fix (Issue #826). As a side effect, the XML parsers adopt a more 
        defensive strategy and prevent by default loading of external entities, validation of DTD,
        and turn on secure processing for SAX parsers.
      - Deprecated MediaType#APPLICATION_RDF_TURTLE and added TEXT_TURTLE constant.
        Suggested by Peter Ansell. Issue #730.

    - Bug fixed
       - Fixed issue #823: Service-Component header missing in manifest.mf for servlet extension.
         Reported by Ioan Lupu.
       - XEE injection security fix. Issue #826. Reported by Alvaro Munoz.
       - OData not passing null when property not marked nullable, issue #663.
         Reported by Carl J. Mosca and contributed by Luke Adams.