@@ -34,6 +34,7 @@
 package org.restlet.ext.servlet;
 
 import java.io.IOException;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Enumeration;
 import java.util.List;
@@ -59,6 +60,7 @@ import org.restlet.engine.adapter.ServerCall;
 import org.restlet.engine.component.ComponentContext;
 import org.restlet.ext.servlet.internal.ServletCall;
 import org.restlet.ext.servlet.internal.ServletWarClient;
+import org.restlet.representation.Representation;
 import org.restlet.routing.Route;
 import org.restlet.routing.TemplateRoute;
 import org.restlet.routing.VirtualHost;
@@ -71,7 +73,8 @@ import org.restlet.routing.VirtualHost;
  * or HTTP protocols.<br>
  * <br>
  * There are three separate ways to configure the deployment using this Servlet.
- * They are described below by order of priority:
+ * Please note that you can also combine the two first of them whereas the last
+ * one is a full alternative. They are described below by order of priority:
  * <table>
  * <tr>
  * <th>Mode</th>
@@ -82,14 +85,16 @@ import org.restlet.routing.VirtualHost;
  * <td>A "/WEB-INF/restlet.xml" file exists and contains a valid XML
  * configuration as described in the documentation of the {@link Component}
  * class. It is used to instantiate and attach the described component,
- * contained applications and connectors.</td>
+ * contained applications and connectors. Please note that you can combine the
+ * usage of such configuration file and method 2.</td>
  * </tr>
  * <tr>
  * <td><b>2</b></td>
  * <td>The "/WEB-INF/web.xml" file contains a parameter named
  * "org.restlet.component". Its value must be the path of a class that inherits
  * from {@link Component}. It is used to instantiate and attach the described
- * component, contained applications and connectors.</td>
+ * component, contained applications and connectors. Please note that you can
+ * combine the definition of your own custom Component subclass and method 1.</td>
  * </tr>
  * <tr>
  * <td><b>3</b></td>
@@ -412,42 +417,65 @@ public class ServerServlet extends HttpServlet {
      * 
      * @return The newly created Component or null if unable to create.
      */
+
+    /**
+     * Creates the single Component used by this Servlet.
+     * 
+     * @return The newly created Component or null if unable to create.
+     */
     protected Component createComponent() {
+        // Detect both customized Component and configuration with restlet.xml
+        // file.
+        Client warClient = createWarClient(new Context(), getServletConfig());
+        String componentClassName = getInitParameter(COMPONENT_KEY, null);
+        Class<?> targetClass = Component.class;
         Component component = null;
 
-        // Look for the Component XML configuration file.
-        Client warClient = createWarClient(new Context(), getServletConfig());
-        Response response = warClient.handle(new Request(Method.GET,
-                "war:///WEB-INF/restlet.xml"));
-        if (response.getStatus().isSuccess() && response.isEntityAvailable()) {
-            component = new Component(response.getEntity());
+        if (componentClassName != null) {
+            try {
+                targetClass = loadClass(componentClassName);
+            } catch (ClassNotFoundException e) {
+                log("[Restlet] ServerServlet couldn't find the target component class. Please check that your classpath includes "
+                        + componentClassName, e);
+            }
         }
 
-        // Look for the component class name specified in the web.xml file.
-        if (component == null) {
-            // Try to instantiate a new target component
-            // First, find the component class name
-            String componentClassName = getInitParameter(COMPONENT_KEY, null);
+        // Look for the Component XML configuration file.
+        Response response = warClient.handle(new Request(Method.GET,
+                "war:///WEB-INF/restlet.xml"));
 
-            // Load the component class using the given class name
-            if (componentClassName != null) {
-                try {
-                    Class<?> targetClass = loadClass(componentClassName);
+        try {
+            log("[Restlet] ServerServlet: component class is "
+                    + componentClassName);
+            if (response.getStatus().isSuccess()
+                    && response.isEntityAvailable()) {
+                @SuppressWarnings("unchecked")
+                Constructor<? extends Component> ctor = ((Class<? extends Component>) targetClass)
+                        .getConstructor(Representation.class);
 
-                    // Create a new instance of the component class by
-                    // invoking the constructor with the Context parameter.
-                    component = (Component) targetClass.newInstance();
-                } catch (ClassNotFoundException e) {
-                    log("[Restlet] ServerServlet couldn't find the target class. Please check that your classpath includes "
-                            + componentClassName, e);
-                } catch (InstantiationException e) {
-                    log("[Restlet] ServerServlet couldn't instantiate the target class. Please check this class has an empty constructor "
-                            + componentClassName, e);
-                } catch (IllegalAccessException e) {
-                    log("[Restlet] ServerServlet couldn't instantiate the target class. Please check that you have to proper access rights to "
-                            + componentClassName, e);
-                }
+                log("[Restlet] ServerServlet: configuring component from war:///WEB-INF/restlet.xml");
+                component = (Component) ctor.newInstance(response.getEntity());
+            } else {
+                component = (Component) targetClass.newInstance();
             }
+        } catch (IllegalAccessException e) {
+            log("[Restlet] ServerServlet couldn't instantiate the target class. Please check that you have proper access rights to "
+                    + componentClassName, e);
+        } catch (InvocationTargetException e) {
+            log("[Restlet] ServerServlet encountered an exception instantiating the target class "
+                    + componentClassName, e.getTargetException());
+        } catch (InstantiationException e) {
+            log(String.format(
+                    "[Restlet] ServerServlet couldn't instantiate the target class. Please check that %s has %s.",
+                    componentClassName,
+                    ((response.getStatus().isSuccess()) ? "a constructor taking a Representation as single parameter"
+                            : "an empty constructor")), e);
+        } catch (NoSuchMethodException e) {
+            log(String.format(
+                    "[Restlet] ServerServlet couldn't instantiate the target class. Please check that %s has %s.",
+                    componentClassName,
+                    ((response.getStatus().isSuccess()) ? "a constructor taking Representation as single parameter"
+                            : "an empty constructor")), e);
         }
 
         // Create the default Component
